# protobuf-c

./: .bazelrc  BUILD.bazel  WORKSPACE.internal.bazel
bazel/: defs.bzl
pkg/: BUILD.bazel  protobuf-c.nfpm.yaml  protobuf-c.spec
