workspace( name = "protobuf-c")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

## load dependencies
http_archive(
    name = "com_google_protobuf",
    strip_prefix = "protobuf-3.13.0",
    sha256 = "9b4ee22c250fe31b16f1a24d61467e40780a3fbb9b91c3b65be2a376ed913a1a",
    urls = ["https://github.com/protocolbuffers/protobuf/archive/v3.13.0.tar.gz"],
)
load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")
protobuf_deps()

local_repository(
    name = "com_github_ericnorris_rules_npfm",
    path = "/workspaces/bzlroot/rules_nfpm",
)

## use a local version just for testing..
local_repository(
    name = "com_github_ericnorris_rules_nfpm",
    path = "/workspaces/bzlroot/rules_nfpm",
)

# http_archive(
#     name = "com_github_ericnorris_rules_nfpm",
#     sha256 = "800ebc64eac94d5ec6589e98a904c8c13aaad1ae0a981550de47a5ad7f72c660",
#     urls = [
#         "https://github.com/ericnorris/rules_nfpm/archive/v2.0.0.tar.gz",
#     ],
#     strip_prefix = "rules_nfpm-2.0.0",
# )

load("@com_github_ericnorris_rules_nfpm//nfpm:repositories.bzl", "rules_nfpm_dependencies")
rules_nfpm_dependencies()

load("@com_github_ericnorris_rules_nfpm//nfpm:setup.bzl", "rules_nfpm_setup")
rules_nfpm_setup(go_repository_default_config="@//:WORKSPACE.bazel")

load("@com_github_ericnorris_rules_nfpm//nfpm:go_repositories.bzl", "rules_nfpm_go_dependencies")
rules_nfpm_go_dependencies()

http_archive(
    name = "rules_pkg",
       urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_pkg/releases/download/0.4.0/rules_pkg-0.4.0.tar.gz",
        "https://github.com/bazelbuild/rules_pkg/releases/download/0.4.0/rules_pkg-0.4.0.tar.gz",
    ],
    sha256 = "038f1caa773a7e35b3663865ffb003169c6a71dc995e39bf4815792f385d837d",
)
load("@rules_pkg//:deps.bzl", "rules_pkg_dependencies")
rules_pkg_dependencies()
# now find the rpmbuild toolchain
load("@rules_pkg//toolchains:rpmbuild_configure.bzl", "find_system_rpmbuild")
find_system_rpmbuild(name = "rules_pkg_rpmbuild")