load("@com_github_ericnorris_rules_nfpm//nfpm:defs.bzl", "nfpm_package")

nfpm_package(
    name = "protobuf-c.rpm",
    visibility = ["//visibility:public"],
    config = "protobuf-c.nfpm.yaml",
    deps = [
        "//third_party/protobuf-c:protobuf_alias_so",
        "//third_party/protobuf-c:protobuf_alias_a",
    ],
)
